--- a/frontend.html
+++ b/frontend.html
@@ -35,7 +35,8 @@
     </main>
 
     <footer>
-        <p>Vdownload - Licensed by Jhanesh V</p>
+        <p>Vdownload - Licensed by Termi V</p>
     </footer>
 </body>
 </html>
+
